--- a/qa/templates/qa/base.html
+++ b/qa/templates/qa/base.html
@@ -55,9 +55,15 @@
           </a>
         </li>
         <li>
-          <a href="/questions/1" class="nav-link link-dark">
+          <a href="/question/1" class="nav-link link-dark">
             <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
             Question details
+          </a>
+        </li>
+        <li>
+          <a href="/question/ask" class="nav-link link-dark">
+            <svg class="bi pe-none me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
+            Ask new question
           </a>
         </li>
       </ul>
