--- a/qa/templates/qa/question.html
+++ b/qa/templates/qa/question.html
@@ -16,7 +16,10 @@
 <h2>Add your answer:</h2>
 <form action="/question/{{ question.id }}/" class="form-horizontal" method="post">
     {% csrf_token %}
-    <p>{{ form.text }}</p>
+    {{ form.as_p }}
+    {% for err in form.non_field_errors %}
+       <div class="alert alert-danger">{{ err }}</div>
+    {% endfor %}
     <div class="form-actions">
         <button type="submit" class="btn btn-primary">Save</button>
     </div>
